# otus_homework_2

./: CMakeLists.txt
.github/workflows/: build_ci.yml
include/: addcmd_command.h  addcommand.h  burnfuelcommand.h  checkfuelcommand.h  commandexception.h  commandprocessor.h  consolelogwriter.h  direction.h  exception_helpers.h  exceptionstore.h  fuel.h  fuelexception.h  icommand.h  icommandqueue.h  iexception.h  iexceptionhandler.h  ifuelobject.h  ilogwriter.h  imovingobject.h  irotatingobject.h  logcommand.h  logexceptioncommand.h  macrocommand.h  move.h  repeatcommandhandler.h  repeatedcommand.h  repeatexception.h  rotate.h  vector.h
src/: addcmd_command.cpp  burnfuelcommand.cpp  checkfuelcommand.cpp  commandprocessor.cpp  consolelogwriter.cpp  direction.cpp  exception_helpers.cpp  exceptionstore.cpp  logcommand.cpp  macrocommand.cpp  move.cpp  rotate.cpp  vector.cpp
test/: main.cpp  test_addcmd_command.cpp  test_burnfuelcommand.cpp  test_checkfuelcommand.cpp  test_commandprocessor.cpp  test_direction.cpp  test_example_logbyexception.cpp  test_linearmovefuelburn.cpp  test_logcommand.cpp  test_logexceptioncommand.cpp  test_macrocommand.cpp  test_move.cpp  test_repeatcommandhandler.cpp  test_repeatedcommand.cpp  test_rotate.cpp  test_vector.cpp
test/mock/: mock_icommand.h  mock_icommandqueue.h  mock_iexceptionhandler.h  mock_logwriter.h
